--- a/src/html/partials/card-blog.html
+++ b/src/html/partials/card-blog.html
@@ -27,7 +27,7 @@
             <div class="card-title h4 fw-medium">
                 <a href="blog-single.html">@@title</a>
             </div>
-            <div class="card-description h6 fw-light text-gray lh-body">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
+            <div class="card-description h6 fw-light lh-body text-black-60">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
             <div class="card-tags">
                 @@if (context.tag1) {<a href="#" class="tag-pill-primary">@@tag1</a>}
                 @@if (context.tag2) {<a href="#" class="tag-pill-primary">@@tag2</a>}
