--- a/src/html/partials/card-glass.html
+++ b/src/html/partials/card-glass.html
@@ -7,7 +7,7 @@
         <!-- text -->
         <div class="card-info">
             <div class="h4 fw-medium text-white mb-1">@@title</div>
-            <div class="h6 fw-light text-white text-opacity-60 mb-0">@@subtitle</div>
+            <div class="h6 fw-light text-white-60 mb-0">@@subtitle</div>
         </div>
     </div>
 </div>
