--- a/src/html/partials/card-hero-info.html
+++ b/src/html/partials/card-hero-info.html
@@ -2,8 +2,8 @@
     <div class="card-body">
         <div>
             <h1 class="hero-title">Digital-продукты для&nbsp;бизнеса: эффективная стратегия под&nbsp;отрасль</h1>
-            <div class="d-flex gap-2">
-                <span class="me-1">
+            <div class="d-flex gap-10">
+                <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
                         <circle cx="18" cy="2" r="2" fill="#F74251"/>
                         <circle cx="18" cy="10" r="2" fill="#F74251"/>
@@ -24,7 +24,7 @@
                         <circle cx="18" cy="34" r="2" fill="#F74251"/>
                     </svg>
                 </span>
-                <div class="hero-subtitle h5 fw-light text-gray mb-0">От&nbsp;шаблона до&nbsp;сложных экосистем.<br> Быстрый старт за&nbsp;14&nbsp;дней с&nbsp;возможностью масштабирования</div>
+                <div class="hero-subtitle h5 fw-light text-black-60 mb-0">От&nbsp;шаблона до&nbsp;сложных экосистем.<br> Быстрый старт за&nbsp;14&nbsp;дней с&nbsp;возможностью масштабирования</div>
             </div>
         </div>
         <div class="card-btn-wrapper">
