--- a/src/html/partials/card-project.html
+++ b/src/html/partials/card-project.html
@@ -20,35 +20,35 @@
             </div>
         </div>
         <div class="h3 fw-medium mb-1">@@title</div>
-        <div class="h5 fw-light text-gray mb-0">@@subtitle</div>
+        <div class="h5 fw-light text-black-60 mb-0">@@subtitle</div>
         <div class="card-project-features-wrapper">
             <div class="card-project-features">
                 <!-- Фича 1 -->
                 @@if (context.feature1) {
                 <div class="card-project-features__item">
                     <div class="h3 fw-medium mb-2">@@feature1.value</div>
-                    <div class="h5 fw-light text-gray mb-0">@@feature1.text</div>
+                    <div class="h5 fw-light text-black-60 mb-0">@@feature1.text</div>
                 </div>
                 }
                 <!-- Фича 2 -->
                 @@if (context.feature2) {
                 <div class="card-project-features__item">
                     <div class="h3 fw-medium mb-2">@@feature2.value</div>
-                    <div class="h5 fw-light text-gray mb-0">@@feature2.text</div>
+                    <div class="h5 fw-light text-black-60 mb-0">@@feature2.text</div>
                 </div>
                 }
                 <!-- Фича 3 -->
                 @@if (context.feature3) {
                 <div class="card-project-features__item">
                     <div class="h3 fw-medium mb-2">@@feature3.value</div>
-                    <div class="h5 fw-light text-gray mb-0">@@feature3.text</div>
+                    <div class="h5 fw-light text-black-60 mb-0">@@feature3.text</div>
                 </div>
                 }
                 <!-- Фича 4 -->
                 @@if (context.feature4) {
                 <div class="card-project-features__item">
                     <div class="h3 fw-medium mb-2">@@feature4.value</div>
-                    <div class="h5 fw-light text-gray mb-0">@@feature4.text</div>
+                    <div class="h5 fw-light text-black-60 mb-0">@@feature4.text</div>
                 </div>
                 }
             </div>
