--- a/src/html/partials/card-tariff-plan.html
+++ b/src/html/partials/card-tariff-plan.html
@@ -2,13 +2,13 @@
     <div class="card-body">
         <div class="card-heading">
             <div class="card-title">
-                <span class="h3 fw-medium">@@title</span>
+                <span class="h3 fw-medium text-reset">@@title</span>
             </div>
             <div class="card-subtitle">
                 <span>@@subtitle</span>
             </div>
             <div class="card-price">
-                <span class="h2 fw-normal">@@price</span>
+                <span class="h2 fw-normal text-reset">@@price</span>
             </div>
         </div>
         <div class="card-sale-info">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="remark-item__body">
                     <div class="remark-title">Для кого:</div>
-                    <div class="text-dark-blue fw-light">Новых сайтов, небольших проектов, начинающих предпринимателей</div>
+                    <div class="fw-light text-black-60">Новых сайтов, небольших проектов, начинающих предпринимателей</div>
                 </div>
             </div>
             <div class="remark-item">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="remark-item__body">
                     <div class="remark-title">Цель:</div>
-                    <div class="text-dark-blue fw-light">обеспечить присутствие в поиске и начать привлекать первых клиентов в интернете</div>
+                    <div class="fw-light text-black-60">обеспечить присутствие в поиске и начать привлекать первых клиентов в интернете</div>
                 </div>
             </div>
         </div>
