--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -32,16 +32,16 @@
                             <a href="services.html">Услуги</a>
                         </li>
                         <li class="nav-item ">
-                            <a href="#">Партнёры</a>
+                            <a href="partners.html">Партнёры</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="nav-item">
                             <a href="blog.html">Блог</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
