--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -19,7 +19,7 @@ $font-family-sans-serif: "Inter", sans-serif, system-ui, -apple-system, "Segoe U
 $line-height-base: 1.4;
 
 // body settings
-$body-color: #100102;
+$body-color: #6A6367;
 $body-bg: #ECECEC;
 
 // borders
