--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -201,6 +201,10 @@ body {
 
     // gaps
 
+    .gap-xxl-15 {
+        gap: 15px !important;
+    }
+
     .gap-xxl-30 {
         gap: 30px !important;
     }
