--- a/src/html/partials/accordion-item.html
+++ b/src/html/partials/accordion-item.html
@@ -8,7 +8,7 @@
         aria-expanded="@@isOpen"
         aria-controls="faq-answer-@@id"
         >
-            <span class="h4 fw-medium mb-0">@@title</span>
+            <span class="h4 fw-medium text-reset mb-0">@@title</span>
             <span class="accordion-icon btn btn-outline-black btn-icon-m">
                 <svg width="14" height="14">
                     <use xlink:href="img/sprite.svg#btn-arrow-down"></use>
@@ -19,7 +19,7 @@
     <div id="faq-answer-@@id" class="collapse @@if (isOpen) {show}" data-bs-parent="#faq">
         <div class="accordion-divider"></div>
         <div class="accordion-body">
-            <div class="accordion-content fw-light text-gray">
+            <div class="accordion-content">
                 @@description
             </div>
         </div>
