--- a/src/html/partials/card-review.html
+++ b/src/html/partials/card-review.html
@@ -2,14 +2,14 @@
     <div class="card-body">
         <div class="card-heading">
             <div class="card-title h4 fw-medium">@@title</div>
-            <div class="card-description fw-light text-gray mb-0">
+            <div class="card-description fw-light text-black-60 mb-0">
                 @@description
             </div>
         </div>
         <div class="d-flex align-items-center justify-content-between">
             <div>
                 <div class="h4 fw-medium mb-1">@@author</div>
-                <div class="fs-small text-gray lh-sm">@@job</div>
+                <div class="fs-small text-black-60 lh-sm">@@job</div>
             </div>
             <div>
                 <a href="#" class="btn btn-outline-black btn-l btn-animated">
