--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -130,7 +130,7 @@
                 .nav {
                     --bs-nav-link-padding-x: 0;
                     --bs-nav-link-font-size: 16px;
-                    --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
+                    --bs-nav-link-color: var(--theme-black-60);
                 }
             }
         }
