--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -52,99 +52,54 @@
 .section-home-hero {
     position: relative;
     padding-top: 81px;
+    padding-bottom: 30px;
     margin: 0;
     background-color: #000;
 
-    .container-fluid {
-        height: 100%;
+    .home-hero-video {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
     }
 
-    .hero-grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        // grid-column-gap: 0;
-        // grid-row-gap: 30px;
-        height: 100%;
-
-        .grid-col {
-            min-width: 0;
-            min-height: 0
-        }
-    }
-
-    .hero-video-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-
-        .desktop-video {
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
-        }
-
-        .mobile-image {
-            img {
-                max-width: 100%;
-                height: auto;
-            }
-        }
+    .home-hero-image {
+        max-width: 100%;
+        height: auto;
     }
 
     .card-hero-info {
-        margin-bottom: 30px;
-    }
-
-    .hero-swiper-wrapper {
-        min-width: 0;
+        flex-grow: 1;
         margin-bottom: 30px;
     }
 
     // Максимальная ширина
 
     @include media-breakpoint-down(sm) {
-        .hero-video-wrapper {
-            .mobile-image {
-                img {
-                    max-height: 250px;
-                }
-            }
+        .home-hero-image {
+            max-height: 250px;
         }
     }
 
     @include media-breakpoint-down(md) {
-        .hero-video-wrapper {
-            .desktop-video {
-                display: none;
-            }
+        .home-hero-video {
+            display: none;
         }
     }
 
     // Минимальная ширина
 
     @include media-breakpoint-up(md) {
-        .hero-video-wrapper {
-            .mobile-image {
-                display: none;
-            }
+        .home-hero-image {
+            display: none;
         }
     }
 
     @include media-breakpoint-up(lg) {
         padding-top: 106px;
-
-        .hero-grid {
-            grid-template-columns: 1fr 1fr;
-        }
+        padding-bottom: 20px;
 
         .card-hero-info {
-            margin-bottom: 20px;
-        }
-
-        .hero-swiper-wrapper {
             margin-bottom: 20px;
         }
     }
@@ -155,12 +110,9 @@
 
     @include media-breakpoint-up(xxl) {
         padding-top: 150px;
+        padding-bottom: 30px;
 
         .card-hero-info {
-            margin-bottom: 30px;
-        }
-
-        .hero-swiper-wrapper {
             margin-bottom: 30px;
         }
     }
@@ -799,18 +751,18 @@
 }
 
 .accordion-faq {
-    --bs-accordion-color: var(--bs-body-color);
-    --bs-accordion-bg: var(--bs-white);
+    --bs-accordion-color: var(--theme-black-60);
+    --bs-accordion-bg: var(--theme-white);
     --bs-accordion-btn-padding-x: 0;
     --bs-accordion-btn-padding-y: 0;
-    --bs-accordion-btn-color: var(--bs-body-color);
-    --bs-accordion-btn-bg: var(--bs-accordion-bg);
+    --bs-accordion-btn-color: var(--theme-black);
+    --bs-accordion-btn-bg: var(--theme-white);
     --bs-accordion-btn-icon-transform: rotate(-90deg);
     --bs-accordion-btn-focus-box-shadow: none;
     --bs-accordion-body-padding-x: 0;
     --bs-accordion-body-padding-y: 0;
-    --bs-accordion-active-color: var(--bs-body-color);
-    --bs-accordion-active-bg: var(--bs-white);
+    --bs-accordion-active-color: var(--theme-blue);
+    --bs-accordion-active-bg: var(--theme-white);
 
     .accordion-item {
         overflow: hidden;
@@ -855,8 +807,11 @@
 
 
     .accordion-content {
+        --bs-link-color-rgb: var(--theme-blue-60-rgb);
+        --bs-link-hover-color-rgb: var(--theme-blue-rgb);
         max-width: 820px;
         font-size: var(--fs-small);
+        font-weight: 300;
 
         a {
             text-decoration: underline;
@@ -980,6 +935,29 @@
     }
 }
 
+/* component: author-avatar-small */
+
+.author-avatar-small {
+    width: 50px;
+    height: 50px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    @include media-breakpoint-up(xl) {
+        width: 60px;
+        height: 60px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        width: 80px;
+        height: 80px;
+    }
+}
+
 /*------------------------------------------------------------------
 [ projects page ]*/
 
@@ -1002,4 +980,14 @@
         grid-template-columns: 1fr;
         gap: 30px;
     }
+}
+
+/*------------------------------------------------------------------
+[ 404 page ]*/
+
+/* section-404 */
+
+.section-404 {
+    position: relative;
+    overflow: hidden;
 }
