--- a/src/scss/components/_variables.scss
+++ b/src/scss/components/_variables.scss
@@ -8,25 +8,31 @@
 
     // Theme colors HEX
     --theme-white: #F8FEFF;
-    --theme-gray: #ECECEC;
-    --theme-stroke-gray: #E4E4E5;
+    --theme-white-60: #EAF1FF;
+    // --theme-gray: #ECECEC; // body color
+    // --theme-stroke-gray: #E4E4E5; // border color
+    --theme-blue: #4251F7;
+    --theme-blue-60: #858ef2;
     --theme-blue-light: #F0F7FF;
     --theme-blue-gradient: linear-gradient(180deg, #4251C3 0%, #7483F5 100%);
-    --theme-blue: #4251F7;
-    --theme-red-gradient: linear-gradient(180deg, #E13847 0%, #EB5665 100%);
     --theme-red: #F74251;
+    --theme-red-gradient: linear-gradient(180deg, #E13847 0%, #EB5665 100%);
     --theme-black: #100102;
+    --theme-black-60: #6A6367;
     --theme-green: #006311;
     --theme-green-light: #C0FCD9;
 
     // Theme colors RGB
     --theme-white-rgb: 248, 254, 255;
-    --theme-gray-rgb: 236, 236, 236;
-    --theme-stroke-gray-rgb: 228, 228, 229;
-    --theme-blue-light-rgb: 240, 247, 255;
+    --theme-white-60-rgb: 234, 241, 255;
+    // --theme-gray-rgb: 236, 236, 236;
+    // --theme-stroke-gray-rgb: 228, 228, 229;
     --theme-blue-rgb: 66, 81, 247;
+    --theme-blue-60-rgb: 133, 142, 242;
+    --theme-blue-light-rgb: 240, 247, 255;
     --theme-red-rgb: 247, 66, 81;
     --theme-black-rgb: 16, 1, 2;
+    --theme-black-60-rgb: 106, 99, 103;
     --theme-green-rgb: 0, 99, 17;
     --theme-green-light-rgb: 192, 252, 217;
 
