--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -507,7 +507,7 @@
         }
 
         .remark-list-item {
-            color: #6A6367;
+            color: var(--theme-black-60);
             font-size: 16px;
             font-weight: 300;
             margin-bottom: 12px;
