--- a/src/scss/components/_variables.scss
+++ b/src/scss/components/_variables.scss
@@ -21,6 +21,7 @@
     --theme-black-60: #6A6367;
     --theme-green: #006311;
     --theme-green-light: #C0FCD9;
+    --theme-gray-gradient: linear-gradient(180deg, #BBC2CA 0%, #D9E0E8 100%);
 
     // Theme colors RGB
     --theme-white-rgb: 248, 254, 255;
