--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -25,6 +25,16 @@ a {
     --bs-link-hover-color-rgb: var(--theme-blue-rgb);
 }
 
+.stretched-link::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    content: "";
+}
+
 .tag-pill-primary {
     --bs-link-color-rgb: var(--theme-blue-rgb);
     --bs-link-bg-color-rgb: var(--theme-blue-light-rgb);
