--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -18,6 +18,10 @@ $black: #100102;
 $font-family-sans-serif: "Inter", sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $line-height-base: 1.4;
 
+// grid system
+$grid-columns: 24;
+// $grid-gutter-width: 1.5rem;
+
 // body settings
 $body-color: #6A6367;
 $body-bg: #ECECEC;
