--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -766,3 +766,71 @@
         }
     }
 }
+
+/* card-partner */
+
+.card-partner {
+    --bs-card-spacer-y: 20px;
+    --bs-card-spacer-x: 15px;
+    --bs-card-border-color: transparent;
+    --bs-card-border-radius: var(--bs-border-radius-lg);
+    --bs-card-bg: var(--theme-white);
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s ease;
+
+    .card-img-preview {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .content-default {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        transition: 0.9s ease;
+    }
+
+    .content-hidden {
+        transform: translateY(100%);
+        opacity: 0;
+        transition: 0.9s ease;
+    }
+
+    &:hover {
+        --bs-card-bg: var(--theme-blue-light);
+
+        .content-default {
+            transform: translateY(-100%);
+            opacity: 0;
+        }
+
+        .content-hidden {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+    }
+
+    // Максимальная ширина
+
+    @include media-breakpoint-down(md) {
+        .content-default {
+            display: none;
+        }
+
+        .content-hidden {
+            opacity: 1;
+            transform: none;
+        }
+    }
+
+    // Минимальная ширина
+
+    @include media-breakpoint-up(xl) {
+        --bs-card-spacer-y: 40px;
+        --bs-card-spacer-x: 40px;
+    }
+}
