--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -958,6 +958,13 @@
     }
 }
 
+/* component: widget-sticky */
+
+.widget-sticky {
+    position: sticky;
+    top: 20px;
+}
+
 /*------------------------------------------------------------------
 [ projects page ]*/
 
