--- a/src/html/partials/card-tariff-plan.html
+++ b/src/html/partials/card-tariff-plan.html
@@ -5,7 +5,7 @@
                 <span class="h3 fw-medium text-reset">@@title</span>
             </div>
             <div class="card-subtitle">
-                <span>@@subtitle</span>
+                <span class="tag-pill">@@subtitle</span>
             </div>
             <div class="card-price">
                 <span class="h2 fw-normal text-reset">@@price</span>
