--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -148,6 +148,10 @@ body {
     --bs-gutter-y: 15px;
 }
 
+.gy-30 {
+    --bs-gutter-y: 30px;
+}
+
 // Максимальная ширина
 
 @include media-breakpoint-down(xl) {
@@ -217,6 +221,10 @@ body {
 
     .p-xl-20 {
         padding: 20px !important;
+    }
+
+    .p-xl-30 {
+        padding: 30px !important;
     }
 
     // margins
