--- a/src/html/partials/card-project.html
+++ b/src/html/partials/card-project.html
@@ -6,20 +6,24 @@
         <div class="card-head">
             <div class="row gy-2 gx-0">
                 <div class="col-xl-auto">
-                    <img class="project-logo img-fluid" src="@@logoURL">
+                    <a href="projects-single.html">
+                        <img class="project-logo img-fluid" src="@@logoURL">
+                    </a>
                 </div>
                 <div class="col-xl">
                     <div class="card-tags">
-                        @@if (context.tag1) {<a href="#">@@tag1</a>}
-                        @@if (context.tag2) {<a href="#">@@tag2</a>}
-                        @@if (context.tag3) {<a href="#">@@tag3</a>}
-                        @@if (context.tag4) {<a href="#">@@tag4</a>}
-                        @@if (context.tag5) {<a href="#">@@tag5</a>}
+                        @@if (context.tag1) {<a href="#" class="tag-pill-outline">@@tag1</a>}
+                        @@if (context.tag2) {<a href="#" class="tag-pill-outline">@@tag2</a>}
+                        @@if (context.tag3) {<a href="#" class="tag-pill-outline">@@tag3</a>}
+                        @@if (context.tag4) {<a href="#" class="tag-pill-outline">@@tag4</a>}
+                        @@if (context.tag5) {<a href="#" class="tag-pill-outline">@@tag5</a>}
                     </div>
                 </div>
             </div>
         </div>
-        <div class="h3 fw-medium mb-1">@@title</div>
+        <div class="h3 fw-medium mb-1">
+            <a href="projects-single.html">@@title</a>
+        </div>
         <div class="h5 fw-light text-black-60 mb-0">@@subtitle</div>
         <div class="card-project-features-wrapper">
             <div class="card-project-features">
@@ -54,7 +58,7 @@
             </div>
         </div>
         <div class="card-btn-wrapper">
-            <a href="#" class="btn btn-outline-black btn-l btn-animated w-100">
+            <a href="projects-single.html" class="btn btn-outline-black btn-l btn-animated w-100">
                 <div class="animated-content">
                     <div class="animated-content__default">
                         <span>Подробнее</span>
