--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -17,6 +17,16 @@ body {
     flex: 1;
 }
 
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+    --bs-gutter-x: 30px;
+}
+
 // Custom Scrollbar
 
 // ::-webkit-scrollbar {
@@ -72,8 +82,16 @@ body {
     grid-template-columns: 1fr;
 }
 
+.grid-cols-24 {
+    grid-template-columns: repeat(24, minmax(0, 1fr));
+}
+
 .col-span-2 {
     grid-column: span 2 / span 2;
+}
+
+.col-span-24 {
+    grid-column: span 24 / span 24;
 }
 
 .max-w-700 {
@@ -243,12 +261,30 @@ body {
 }
 
 @include media-breakpoint-up(xl) {
+    .container,
+    .container-fluid,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        --bs-gutter-x: 40px;
+    }
+
     .grid-cols-xl-2 {
         grid-template-columns: 1fr 1fr;
     }
 
     .grid-cols-xl-3 {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .col-span-xl-7 {
+        grid-column: span 7 / span 7;
+    }
+
+    .col-span-xl-17 {
+        grid-column: span 17 / span 17;
     }
 
     // paddings
@@ -307,6 +343,24 @@ body {
 }
 
 @include media-breakpoint-up(xxl) {
+    .container,
+    .container-fluid,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        --bs-gutter-x: 60px;
+    }
+
+    .col-span-xxl-9 {
+        grid-column: span 9 / span 9;
+    }
+
+    .col-span-xxl-15 {
+        grid-column: span 15 / span 15;
+    }
+
     // paddings
 
     .p-xxl-20 {
@@ -372,6 +426,6 @@ body {
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1860px;
+        max-width: 1920px;
     }
 }
