--- a/src/html/partials/card-project.html
+++ b/src/html/partials/card-project.html
@@ -1,6 +1,8 @@
 <div class="card card-project">
     <div class="card-media">
-        <div class="bg-img w-100 h-100" style="background-image: url(@@imgThumbURL);"></div>
+        <a href="projects-single.html">
+            <img class="object-fit-cover w-100 h-100" src="@@imgThumbURL" alt="...">
+        </a>
     </div>
     <div class="card-body">
         <div class="card-head">
