--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,12 +3,12 @@
 
 .footer {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 15px;
     padding-bottom: 20px;
 
+    // cta-bar
     &__cta-bar {
-
         .cta-wrapper {
             position: relative;
             overflow: hidden;
@@ -28,7 +28,8 @@
         .cta-content {
             position: relative;
             display: grid;
-            grid-template-columns: 1fr;
+            grid-template-columns: repeat(1, minmax(0, 1fr));
+            gap: 0;
 
             &__logo {
                 max-width: 210px;
@@ -69,7 +70,6 @@
             }
 
             &__form {
-
                 .form-wrapper {
                     overflow: hidden;
                     padding: 25px 15px;
@@ -104,6 +104,7 @@
         }
     }
 
+    // main-bar
     &__main-bar {
         .footer-widget {
             padding: 15px 0;
@@ -135,9 +136,9 @@
             }
         }
     }
-    
+
+    // copyright-bar
     &__copyright-bar {
-        
         .copyright-text {
             font-size: 13px;
 
@@ -150,7 +151,6 @@
     // Максимальная ширина
 
     @include media-breakpoint-down(lg) {
-
         &__main-bar {
             .footer-widget {
                 &__title {
@@ -187,30 +187,30 @@
             }
 
             .cta-content {
-                grid-template-columns: 260px auto 300px;
+                grid-template-columns: repeat(24, minmax(0, 1fr));
     
                 &__logo {
-                    grid-row: 1 / 3;
-                    grid-column: 1 / 2;
+                    grid-column: 1 / span 8;
+                    grid-row: 1;
+                    max-width: 100%;
                     margin-bottom: 15px;
                 }
     
                 &__contacts {
-                    grid-row: 3 / 4;
-                    grid-column: 1 / 2;
-                    justify-content: flex-end;
+                    grid-column: 1 / span 8;
+                    grid-row: 4;
                     margin-bottom: 0;
                 }
     
                 &__form-title {
-                    grid-row: 2 / 3;
-                    grid-column: 1 / 2;
+                    grid-column: 1 / span 8;
+                    grid-row: 2;
                     margin-bottom: 0;
                 }
     
                 &__form {
-                    grid-row: 1 / 4;
-                    grid-column: 3 / 4;
+                    grid-column: 15 / span 10;
+                    grid-row: 1 / span 4;
                 }
             }
         }
@@ -222,6 +222,24 @@
                 top: -34px;
                 right: 46px;
                 width: 900px;
+            }
+
+            .cta-content {
+                &__logo {
+                    grid-column: 1 / span 7;
+                }
+
+                &__contacts {
+                    grid-column: 1 / span 7;
+                }
+
+                &__form-title {
+                    grid-column: 1 / span 7;
+                }
+
+                &__form {
+                    grid-column: 17 / span 8;
+                }
             }
         }
 
@@ -255,14 +273,21 @@
             }
 
             .cta-content {
-                grid-template-columns: 460px auto 400px;
-
                 &__logo {
-                    max-width: 400px;
-                    margin-bottom: 0;
+                    grid-column: 1 / span 6;
+                }
+
+                &__contacts {
+                    grid-column: 1 / span 10;
+                }
+
+                &__form-title {
+                    grid-column: 1 / span 10;
                 }
 
                 &__form {
+                    grid-column: 18 / span 7;
+
                     .form-wrapper {
                         padding: 30px;
                     }
@@ -290,14 +315,6 @@
                 top: -110px;
                 right: 140px;
                 width: 1250px;
-            }
-
-            .cta-content {
-                grid-template-columns: 630px auto 480px;
-
-                &__logo {
-                    margin-bottom: 15px;
-                }
             }
         }
     }
