--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -68,8 +68,7 @@
     }
 
     .card-hero-info {
-        flex-grow: 1;
-        margin-bottom: 30px;
+        height: 100%;
     }
 
     // Максимальная ширина
@@ -97,10 +96,6 @@
     @include media-breakpoint-up(lg) {
         padding-top: 106px;
         padding-bottom: 20px;
-
-        .card-hero-info {
-            margin-bottom: 20px;
-        }
     }
 
     @include media-breakpoint-up(xl) {
@@ -110,10 +105,6 @@
     @include media-breakpoint-up(xxl) {
         padding-top: 150px;
         padding-bottom: 30px;
-
-        .card-hero-info {
-            margin-bottom: 30px;
-        }
     }
 }
 
@@ -148,7 +139,7 @@
 
     &__grid {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 15px;
     }
 
@@ -160,7 +151,7 @@
         margin-bottom: 70px;
 
         &__grid {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
             gap: 10px;
         }
     }
@@ -171,7 +162,7 @@
         }
         
         &__grid {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
             gap: 4px;
         }
     }
@@ -218,7 +209,7 @@
 
     &__grid {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 15px;
     }
 
@@ -248,7 +239,7 @@
         }
 
         &__grid {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
         }
 
         &__btn-wrp {
@@ -264,7 +255,7 @@
         }
 
         &__grid {
-            grid-template-columns: 1fr;
+            grid-template-columns: repeat(1, minmax(0, 1fr));
             gap: 30px;
         }
     }
@@ -294,10 +285,11 @@
     .cta-content {
         position: relative;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        gap: 0;
 
         &__heading {
-            max-width: 615px;
+            margin-bottom: 40px;
         }
 
         &__title {
@@ -305,12 +297,11 @@
         }
 
         &__subtitle {
+            max-width: 615px;
             margin-bottom: 0;
         }
 
         &__form {
-            margin-top: 40px;
-
             .form-wrapper {
                 overflow: hidden;
                 padding: 25px 15px;
@@ -394,7 +385,6 @@
     }
 
     @include media-breakpoint-up(lg) {
-
         .cta-wrapper {
             padding: 15px;
         }
@@ -406,17 +396,17 @@
         }
 
         .cta-content {
-            grid-template-columns: 325px auto 308px;
+            grid-template-columns: repeat(24, minmax(0, 1fr));
 
             &__heading {
-                grid-row: 1 / 3;
-                grid-column: 1 / 2;
+                grid-column: 1 / span 11;
+                grid-row: 1;
+                margin-bottom: 0;
             }
 
             &__form {
-                grid-row: 1 / 4;
-                grid-column: 3 / 4;
-                margin-top: 0;
+                grid-column: 17 / span 8;
+                grid-row: 1 / span 2;
 
                 .form-wrapper {
                     padding: 30px 15px;
@@ -424,8 +414,8 @@
             }
 
             &__socials {
-                grid-row: 3 / 4;
-                grid-column: 1 / 2;
+                grid-column: 1 / span 11;
+                grid-row: 2;
 
                 .content-divider {
                     margin-top: 40px;
@@ -454,10 +444,8 @@
         }
 
         .cta-content {
-            grid-template-columns: 525px auto 400px;
-            
             &__heading {
-                max-width: 500px;
+                grid-column: 1 / span 9;
             }
 
             &__title {
@@ -465,12 +453,16 @@
             }
 
             &__form {
+                grid-column: 18 / span 7;
+
                 .form-wrapper {
                     padding: 30px;
                 }
             }
 
             &__socials {
+                grid-column: 1 / span 9;
+
                 .content-divider {
                     margin-top: 40px;
                     margin-bottom: 70px;
@@ -503,12 +495,6 @@
         }
 
         .cta-content {
-            grid-template-columns: 580px auto 480px;
-
-            &__heading {
-                max-width: 100%;
-            }
-
             &__form {
                 .form-wrapper {
                     padding: 40px;
@@ -537,7 +523,7 @@
 
     &__grid {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 30px;
     }
 
@@ -555,7 +541,7 @@
         }
 
         &__grid {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
             gap: 20px;
         }
     }
@@ -860,11 +846,11 @@
 
 .services-widgets-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 40px;
 
     @include media-breakpoint-up(xl) {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 60px;
     }
 }
@@ -888,16 +874,16 @@
 
 .blog-cards-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 15px;
 
     @include media-breakpoint-up(md) {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 20px;
     }
 
     @include media-breakpoint-up(xl) {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
         gap: 30px;
     }
 }
@@ -982,7 +968,7 @@
 
 .projects-cards-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 15px;
 
     @include media-breakpoint-up(md) {
@@ -990,11 +976,11 @@
     }
 
     @include media-breakpoint-up(xl) {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
     @include media-breakpoint-up(xxl) {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 30px;
     }
 }
