--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,8 @@
 @import 'components/buttons';
 @import 'components/swiper';
 @import 'components/cards';
+@import 'components/modals';
+@import 'components/scrollable';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/sections';
